--- a/intron/README.ipynb
+++ b/intron/README.ipynb
@@ -27,6 +27,26 @@
     "\n",
     "We will be using the first version: E-GEUV-1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Directory tree context\n",
+    "\n",
+    "\n",
+    "In **quant_splicing/transcript-qtls/** you will find the code used\n",
+    "to process the dataset and the dataset itself.\n",
+    "Go to [README](quant_splicing/transcript-qtls/README.ipydb) to find more\n",
+    "information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
