--- a/intron/README.ipynb
+++ b/intron/README.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "In **quant_splicing/transcript-qtls/** you will find the code used\n",
     "to process the dataset and the dataset itself.\n",
-    "Go to [README](quant_splicing/transcript-qtls/README.ipydb) to find more\n",
+    "Go to [README](quant_splicing/transcript-qtls/README.ipyn) to find more\n",
     "information."
    ]
   },
