--- a/intron/README.ipynb
+++ b/intron/README.ipynb
@@ -44,9 +44,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:data]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-data-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
